--- a/src/pages/Work/style.module.scss
+++ b/src/pages/Work/style.module.scss
@@ -57,6 +57,8 @@
     list-style: none;
     margin-top: 10px;
     padding: 0;
+    min-width: 50px;
+    overflow: auto;
 
     li{
         border: solid 1px $primary-color;
